--- a/CSS_/MenuList2.css
+++ b/CSS_/MenuList2.css
@@ -11,15 +11,13 @@ body{
 }
 ul{
   display: flex;
-  padding-left: 5px;
-  padding-top: 20px;
 }
 .bundle_box2_4{
   margin-top: -19px;
   margin-left: 10px;
 }
 .box{
-  width:610px;
+  width:500px;
   height: 400px;
   border: 1px solid black;
   border-radius: 5px;
@@ -63,7 +61,7 @@ ul{
   padding-left: 95px;
   background-color: rgb(105, 103, 103);
   color: #f0f0f0;
-  background-image: url(Photo/card.png);
+  background-image: url(images/card.png);
   background-size: cover;
   background-repeat: no-repeat;
   padding-right: 20px;
@@ -72,11 +70,8 @@ ul{
  
 }
 
-.fontsi{
-  font-size: 26px;
-  font-weight: bold;
-}
 
-#timer{
-  font-size: 50px;
+.fontsi{
+  font-size: 25px;
+  font-weight: bold;
 }
