--- a/CSS_/MenuList.css
+++ b/CSS_/MenuList.css
@@ -17,13 +17,12 @@ ul {
 }
 
 .bundle_box2_4 {
-  margin-top: -19px;
-  margin-left: 10px;
- 
+  height: 0px;
+  padding-top: -100px;
 }
 
 /*박스 크기 수정 및 마진 탑, 레프트, 라이트 추가*/
-.box {/*초 옆에 네모 박스*/
+#box {/*초 옆에 네모 박스*/
   width: 490px;
   height: 350px;
   border: 1px solid black;
@@ -39,7 +38,6 @@ ul {
 .box2 { /*초 결제 정리*/
   width: 300px;
   height: 130px;
-  margin-left: 27px;
   display: flex;
   position: static;
   border-bottom: 1px solid black;
@@ -65,7 +63,7 @@ ul {
 .box4 { /*회색 박스(결제)*/
   width: 300px;
   height: 250px; /*수정*/
-  padding-left: 30px;
+  padding-left: 10px;
   margin-top: 20px;
  
 }
@@ -96,3 +94,24 @@ ul {
   font-size: 50px;
 }
 
+.selected-menu{
+  border: 1px solid #000;
+  /* padding-top: 350px; */
+  margin-top: 307px;
+  margin-left: 40px;
+  margin-right: 25px;
+  width: 480px;
+  height: 350px;
+}
+
+#selected-menu-list{
+  
+  width: 450px;
+  height: 20px;
+  font-size: 30px;
+  list-style-type: none;
+  padding: 0;
+}
+li{
+  width: 450px;
+}
