--- a/CSS_/MenuList.css
+++ b/CSS_/MenuList.css
@@ -10,6 +10,15 @@ body {
 
 }
 
+/*스크롤*/
+.scrollBar {
+  width: 880px;
+  height: 600px;
+  margin: 0 auto;
+ overflow-y: scroll;
+ }
+
+
 ul {
   display: flex;
   padding-left: 5px;
